/*
 * This file is part of trust|me
 * Copyright(c) 2013 - 2019 Fraunhofer AISEC
 * Fraunhofer-Gesellschaft zur FÃ¶rderung der angewandten Forschung e.V.
 *
 * This program is free software; you can redistribute it and/or modify it
 * under the terms and conditions of the GNU General Public License,
 * version 2 (GPL 2), as published by the Free Software Foundation.
 *
 * This program is distributed in the hope it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GPL 2 license for more details.
 *
 * You should have received a copy of the GNU General Public License along with
 * this program; if not, see <http://www.gnu.org/licenses/>
 *
 * The full GNU General Public License is included in this distribution in
 * the file called "COPYING".
 *
 * Contact Information:
 * Fraunhofer AISEC <trustme@aisec.fraunhofer.de>
 */

syntax = "proto2";

option java_package = "de.fraunhofer.aisec.trustme";

// type of attestation in the IDS context
enum IdsAttestationType {
  // kernel + core container (PCR 0 to 10)
  BASIC = 0;

  // everything (PCRs 0 to 23)
  ALL = 1;

  // PCRs must be specified manually
  ADVANCED = 2;
}

enum HashAlgLen {
  SHA1   = 20;
  SHA256 = 32;
  SHA384 = 48;
}

message Pcr {
  // the PCR number (usually between 0 and 23)
  optional int32 number = 1;

  // the value of PCR<number>
  optional bytes value = 2;
}

message MlContainerEntry {

	// the TPM PCR index the measurement is stored in
	required int32 pcr_index = 1;

	// the filename of the container
	required string filename = 2;

	// the template hash algorithm of the measurement list entry
	required string template_hash_alg = 3;

	// the template hash of the measurement list entry
	required bytes template_hash = 4;

	// the file data hash algorithm of the measurement list entry
	required string data_hash_alg = 5;

	// the file data hash of the measurement list entry
	required bytes data_hash = 6;
}

message RemoteToTpm2d {
	enum Code {
		ATTESTATION_REQ = 1;
	}

	required Code code = 1;

	// type of attestation in the IDS context
	optional IdsAttestationType atype = 2 [default = BASIC];

	// qualifingData (i.e. external data provided by the caller, such as a nonce)
	optional bytes qualifyingData = 3;

	// pcr bitmask for AttestationType ADVANCED only
	//  - for BASIC, the default PCRs are PCRs 0 to 11
	//  - for ALL  , the default PCRs are PCRs 0 to 23
	optional int32 pcrs = 4;
}

message Tpm2dToRemote {
	enum Code {
		ATTESTATION_RES = 1;
	}

	required Code code = 1;

	// type of attestation in the IDS context
	optional IdsAttestationType atype = 2 [default = BASIC];

	// the hash algorith used to sign the quoted information
	optional HashAlgLen halg = 3;

	// the quoted information (a TPMS_ATTEST data structure)
	optional bytes quoted = 4;

	// the signature over 'quoted' (a TPMT_SIGNATURE data structure with an
	// TPMS_SIGNATURE_RSAPSS signature algorithm)
	optional bytes signature = 5;

	// the explicit PCR values
	repeated Pcr pcr_values = 6;

	// an _optional_ certificate that includes the public key
	optional bytes certificate = 7;

	// the IMA measurement list in ima binary format
	required bytes ml_ima_entry = 11;

	// the container measurement list
	repeated MlContainerEntry ml_container_entry = 12;
}
